to fix overflow x hidden on mobile

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -36,8 +36,10 @@ body {
 	font-family: "Work Sans", sans-serif;
 	color: var(--text);
 	transition: 0.2s ease-in-out all;
-	// overflow-x: hidden;
-	overflow-x: hidden;
+
+	.overflow {
+		overflow-x: hidden;
+	}
 }
 
 nav {
